--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,7 +7,7 @@
       "title title";
   }
 .logo{
-  padding-top: 4%;
+  padding-top: 2%;
   padding-right: 2%;
   padding-left: 2%;
 }
